fix spacing error in about

--- a/src/sass/layout/about.scss
+++ b/src/sass/layout/about.scss
@@ -69,6 +69,7 @@
     
             a {
                 @include button(black, transparent, true);
+                margin-bottom: 15px;
             }
         }
     }
